--- a/ghost-efs-sc.yml
+++ b/ghost-efs-sc.yml
@@ -1,7 +1,7 @@
 kind: storageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: ghost
+  name: ghost1
 provisioner: efs.csi.aws.com
 parameters: 
   ProvisioningMode: efs-ap
