--- a/argo-cd/Chart.yaml
+++ b/argo-cd/Chart.yaml
@@ -1,20 +1,21 @@
 # Copyright Broadcom, Inc. All Rights Reserved.
 # SPDX-License-Identifier: APACHE-2.0
 
+
 annotations:
   images: |
     - name: argo-cd
-      image: docker.io/bitnami/argo-cd:3.1.1-debian-12-r0
+      image: quay.io/argoproj/argocd:v2.14.7
     - name: dex
-      image: docker.io/bitnami/dex:2.43.1-debian-12-r8
+      image: ghcr.io/dexidp/dex:v2.41.1
     - name: os-shell
-      image: docker.io/bitnami/os-shell:12-debian-12-r51
+      image: docker.io/bitnami/os-shell:latest
     - name: redis
-      image: docker.io/bitnami/redis:8.2.1-debian-12-r0
+      image: docker.io/bitnami/redis:latest
   licenses: Apache-2.0
   tanzuCategory: application
 apiVersion: v2
-appVersion: 3.1.1
+appVersion: 2.14.7
 dependencies:
 - condition: redis.enabled
   name: redis
